Fix: Use remote_theme for GitHub Pages compatibility
Changed from 'theme' to 'remote_theme' so GitHub Pages can
fetch jekyll-theme-so-simple from the GitHub repository.
This resolves the missing gem error during build.

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ github_username:  jekyll
 custom_css: /assets/css/custom.css
 
 # Build settings
-theme: jekyll-theme-so-simple
+remote_theme: mmistakes/so-simple-theme
 skin: "/assets/css/skins/dark.css"
 plugins:
   - jekyll-feed
